# denuncias-df

./: LICENSE  db.sqlite3  pyproject.toml
denuncias/: asgi.py  settings.py  urls.py  wsgi.py
denuncias/home/: apps.py
denuncias/ocorrencias/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
denuncias/ocorrencias/migrations/: 0001_initial.py  0002_alter_denuncia_options_denuncia_anexo_and_more.py  0003_alter_denuncia_options_denuncia_orgao_competente_and_more.py  0004_orgao_remove_denuncia_orgao_competente_and_more.py  0005_categoriadenuncia_alter_denuncia_categoria.py  0006_denuncia_latitude_denuncia_longitude_and_more.py  0007_alter_denuncia_localizacao.py  0008_alter_denuncia_latitude_alter_denuncia_longitude.py  0009_alter_denuncia_latitude_alter_denuncia_longitude.py
denuncias/static/app/css/: styles.css
denuncias/usuarios/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
denuncias/usuarios/migrations/: 0001_initial.py  0002_alter_usuario_options_usuario_orgaos_responsavel.py  0003_usuario_date_joined.py
denuncias/usuarios/templates/: cadastro.html  login.html
templates/app/: admin_dashboard.html  admin_detalhes_denuncia.html  admin_mapa_denuncias.html  base.html  cadastro.html  detalhes_denuncia.html  enviar_denuncia.html  home.html  login.html  user-dashboard.html
