[project]
name = "denuncias-df"
version = "0.1.0"
description = "Projeto desenvolvido para a disciplina de Novas Tecnologias, com o objetivo de criar um mapa interativo de denúncias. A iniciativa busca conectar a população do Distrito Federal à Secretaria de Segurança Pública do DF (SSP-DF), facilitando o registro e a visualização de ocorrências em tempo real."
authors = [
    {name = "oclava",email = "matheuscmabreu@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
